# chessMTUCI

./: Autorization.cpp  Autorization.h  CMakeLists.txt  FugureClass.cpp  FugureClass.h  GUI.h  GUI.resx  Game.cpp  Game.h  Game.resx  README.md  RegForm.h  build.bat  chessMTUCI.sln  chessMTUCI.vcxproj  chessMTUCI.vcxproj.filters  main.cpp
chessMTUCI/x64/Debug/: chessMTUCI.GUI.resources  chessMTUCI.Game.resources  chessMTUCI.exe.recipe  chessMTUCI.pawnFinaleBlack.resources  chessMTUCI.pawnFinaleWhite.resources  chessMTUCI.vcxproj.AssemblyReference.cache  chessMTUCI.vcxproj.FileListAbsolute.txt  chessMTUCI.vcxproj.GenerateResource.cache
chessMTUCI/x64/Debug/chessMTUCI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  chessMTUCI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Autorization.h  GUI.h  RegForm.h  chessMTUCI.vcxproj  main.cpp  pawnFinaleBlack.h  pawnFinaleBlack.resx  pawnFinaleWhite.h  pawnFinaleWhite.resx
x64/Debug/: chessMTUCI.exe.metagen
